// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suites for Detail component detail comp renders without crashing 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="Details"
  >
    <Navigator
      token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
    />
    <div
      className="section-header"
      style={
        Object {
          "backgroundColor": "#E5E4E2",
          "color": "#212F3C",
        }
      }
    >
      <h1
        className="light"
      >
        <span
          className="w3-padding-large borderRight"
        >
          <i
            className="fa fa-star"
          />
        </span>
        <span
          className="w3-padding-large"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          emporium
           CENTER
        </span>
      </h1>
      <p
        className="font2 w3-padding-large"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id odio mollis, luctus ex at, accumsan magna....
      </p>
    </div>
    <div
      className="section-header2 font2"
    >
      <div
        className="row"
      >
        <div
          className="col l5 m12 s12"
        >
          <div
            className="borders"
          >
            <h2
              className="font2"
            >
              <b>
                emporium
              </b>
            </h2>
            <p>
              from  
              <span
                className="red-text"
                style={
                  Object {
                    "fontSize": 22,
                    "marginLeft": 6,
                  }
                }
              >
                $
                400
              </span>
              / hour
            </p>
          </div>
          <p
            className="blue-grey-text"
          >
            Capacity: 
            ,  Size/sqft: 140-150sq
          </p>
          <p
            className="font2 location"
            style={
              Object {
                "fontSize": 18,
              }
            }
          >
            <i
              className="fa fa-map-marker blue-grey-text"
              style={
                Object {
                  "width": 10,
                }
              }
            />
             
          </p>
          <p
            className="font2"
            style={
              Object {
                "fontSize": 18,
              }
            }
          >
            Donec placerat molestie sapien ac eleifend. Phasellus vulputate sagittis libero. In consectetur efficitur In consectetur efficitur erat, sit amet laoreet velit tempor nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus erat, sit amet laoreet velit tempor nec..
          </p>
          <p>
            <span>
              <i
                className="fa fa-check blue-grey-text"
                style={
                  Object {
                    "width": 20,
                  }
                }
              />
            </span>
            Individual air conditioning units
          </p>
          <p>
            <span>
              <i
                className="fa fa-check blue-grey-text"
                style={
                  Object {
                    "width": 20,
                  }
                }
              />
            </span>
            Safe
          </p>
          <p>
            <span>
              <i
                className="fa fa-check blue-grey-text"
                style={
                  Object {
                    "width": 20,
                  }
                }
              />
            </span>
            Accessible
          </p>
          <p>
            <span>
              <i
                className="fa fa-check blue-grey-text"
                style={
                  Object {
                    "width": 20,
                  }
                }
              />
            </span>
            Internet Access 24/7
          </p>
          <br />
          <div
            className=""
            style={
              Object {
                "paddingBottom": 100,
              }
            }
          >
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/add/emporium"
            >
              <button
                className="btn red"
                style={
                  Object {
                    "marginRight": 25,
                  }
                }
              >
                BOOK CENTER
              </button>
            </Link>
          </div>
        </div>
        <div
          className="col l7 m12 s12"
        >
          <img
            className="img-responsive w3-border"
            src={undefined}
            style={
              Object {
                "height": 450,
                "padding": 6,
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="row w3-padding-32 font2"
      style={
        Object {
          "backgroundColor": "#E5E4E2",
        }
      }
    >
      <div
        className="container"
      >
        <div
          className="col s12"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <ul
            className="tabs"
          >
            <li
              className="tab col s3"
            >
              <a
                className="active red-text"
                href="#test1"
              >
                Upcoming Events
              </a>
            </li>
            <li
              className="tab col s3"
            >
              <a
                className="red-text"
                href="#test2"
              >
                Past Events
              </a>
            </li>
            <li
              className="tab col s3 rev"
            >
              <a
                className="red-text"
                href="#test3"
              >
                Reviews
              </a>
            </li>
          </ul>
        </div>
        <div
          className="col s12 m12 l12"
          id="test3"
        >
          <Reviews
            decoded={
              Object {
                "exp": 1520890192,
                "iat": 1520717392,
                "user": Object {
                  "createdAt": "2018-03-10T20:55:45.237Z",
                  "email": "foo11@foo.com",
                  "id": 88,
                  "isAdmin": false,
                  "password": "$2a$10$1jemzAekY1AincxuD.VJSOExI5uiJU4t7brKCPzc0MifFR5MgUT7i",
                  "updatedAt": "2018-03-10T20:55:45.237Z",
                  "username": "andrew",
                },
              }
            }
            handleSubmit={[Function]}
            onChange={[Function]}
            review={
              Array [
                Object {
                  "comment": "hello",
                  "user": "aje",
                },
              ]
            }
            setTime={[Function]}
            state={
              Object {
                "comment": "",
                "newArr1": Array [],
                "pastArr1": Array [],
              }
            }
            token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
          />
        </div>
        <div
          className="col s12 m12 l12"
          id="test1"
        >
          <div
            className="container center"
          >
            <h2
              className="font2"
              style={
                Object {
                  "fontSize": 20,
                }
              }
            >
              <i
                aria-hidden="true"
                className="yellow-text fa fa-exclamation-triangle"
                style={
                  Object {
                    "paddingRight": 5,
                  }
                }
              />
              No events available for this center
            </h2>
          </div>
        </div>
        <div
          className="col s12 m12 l12"
          id="test2"
        >
          <div
            className="container prevInfo"
          >
            <h2
              className="font2"
              style={
                Object {
                  "fontSize": 20,
                }
              }
            >
              <i
                aria-hidden="true"
                className="yellow-text fa fa-exclamation-triangle"
                style={
                  Object {
                    "paddingRight": 5,
                  }
                }
              />
              No past events available for this center
            </h2>
          </div>
        </div>
      </div>
    </div>
    <br />
    <br />
    <Footer />
  </div>,
  "nodes": Array [
    <div
      className="Details"
    >
      <Navigator
        token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
      />
      <div
        className="section-header"
        style={
          Object {
            "backgroundColor": "#E5E4E2",
            "color": "#212F3C",
          }
        }
      >
        <h1
          className="light"
        >
          <span
            className="w3-padding-large borderRight"
          >
            <i
              className="fa fa-star"
            />
          </span>
          <span
            className="w3-padding-large"
            style={
              Object {
                "textTransform": "uppercase",
              }
            }
          >
            emporium
             CENTER
          </span>
        </h1>
        <p
          className="font2 w3-padding-large"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id odio mollis, luctus ex at, accumsan magna....
        </p>
      </div>
      <div
        className="section-header2 font2"
      >
        <div
          className="row"
        >
          <div
            className="col l5 m12 s12"
          >
            <div
              className="borders"
            >
              <h2
                className="font2"
              >
                <b>
                  emporium
                </b>
              </h2>
              <p>
                from  
                <span
                  className="red-text"
                  style={
                    Object {
                      "fontSize": 22,
                      "marginLeft": 6,
                    }
                  }
                >
                  $
                  400
                </span>
                / hour
              </p>
            </div>
            <p
              className="blue-grey-text"
            >
              Capacity: 
              ,  Size/sqft: 140-150sq
            </p>
            <p
              className="font2 location"
              style={
                Object {
                  "fontSize": 18,
                }
              }
            >
              <i
                className="fa fa-map-marker blue-grey-text"
                style={
                  Object {
                    "width": 10,
                  }
                }
              />
               
            </p>
            <p
              className="font2"
              style={
                Object {
                  "fontSize": 18,
                }
              }
            >
              Donec placerat molestie sapien ac eleifend. Phasellus vulputate sagittis libero. In consectetur efficitur In consectetur efficitur erat, sit amet laoreet velit tempor nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus erat, sit amet laoreet velit tempor nec..
            </p>
            <p>
              <span>
                <i
                  className="fa fa-check blue-grey-text"
                  style={
                    Object {
                      "width": 20,
                    }
                  }
                />
              </span>
              Individual air conditioning units
            </p>
            <p>
              <span>
                <i
                  className="fa fa-check blue-grey-text"
                  style={
                    Object {
                      "width": 20,
                    }
                  }
                />
              </span>
              Safe
            </p>
            <p>
              <span>
                <i
                  className="fa fa-check blue-grey-text"
                  style={
                    Object {
                      "width": 20,
                    }
                  }
                />
              </span>
              Accessible
            </p>
            <p>
              <span>
                <i
                  className="fa fa-check blue-grey-text"
                  style={
                    Object {
                      "width": 20,
                    }
                  }
                />
              </span>
              Internet Access 24/7
            </p>
            <br />
            <div
              className=""
              style={
                Object {
                  "paddingBottom": 100,
                }
              }
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/add/emporium"
              >
                <button
                  className="btn red"
                  style={
                    Object {
                      "marginRight": 25,
                    }
                  }
                >
                  BOOK CENTER
                </button>
              </Link>
            </div>
          </div>
          <div
            className="col l7 m12 s12"
          >
            <img
              className="img-responsive w3-border"
              src={undefined}
              style={
                Object {
                  "height": 450,
                  "padding": 6,
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="row w3-padding-32 font2"
        style={
          Object {
            "backgroundColor": "#E5E4E2",
          }
        }
      >
        <div
          className="container"
        >
          <div
            className="col s12"
            style={
              Object {
                "marginBottom": 15,
              }
            }
          >
            <ul
              className="tabs"
            >
              <li
                className="tab col s3"
              >
                <a
                  className="active red-text"
                  href="#test1"
                >
                  Upcoming Events
                </a>
              </li>
              <li
                className="tab col s3"
              >
                <a
                  className="red-text"
                  href="#test2"
                >
                  Past Events
                </a>
              </li>
              <li
                className="tab col s3 rev"
              >
                <a
                  className="red-text"
                  href="#test3"
                >
                  Reviews
                </a>
              </li>
            </ul>
          </div>
          <div
            className="col s12 m12 l12"
            id="test3"
          >
            <Reviews
              decoded={
                Object {
                  "exp": 1520890192,
                  "iat": 1520717392,
                  "user": Object {
                    "createdAt": "2018-03-10T20:55:45.237Z",
                    "email": "foo11@foo.com",
                    "id": 88,
                    "isAdmin": false,
                    "password": "$2a$10$1jemzAekY1AincxuD.VJSOExI5uiJU4t7brKCPzc0MifFR5MgUT7i",
                    "updatedAt": "2018-03-10T20:55:45.237Z",
                    "username": "andrew",
                  },
                }
              }
              handleSubmit={[Function]}
              onChange={[Function]}
              review={
                Array [
                  Object {
                    "comment": "hello",
                    "user": "aje",
                  },
                ]
              }
              setTime={[Function]}
              state={
                Object {
                  "comment": "",
                  "newArr1": Array [],
                  "pastArr1": Array [],
                }
              }
              token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
            />
          </div>
          <div
            className="col s12 m12 l12"
            id="test1"
          >
            <div
              className="container center"
            >
              <h2
                className="font2"
                style={
                  Object {
                    "fontSize": 20,
                  }
                }
              >
                <i
                  aria-hidden="true"
                  className="yellow-text fa fa-exclamation-triangle"
                  style={
                    Object {
                      "paddingRight": 5,
                    }
                  }
                />
                No events available for this center
              </h2>
            </div>
          </div>
          <div
            className="col s12 m12 l12"
            id="test2"
          >
            <div
              className="container prevInfo"
            >
              <h2
                className="font2"
                style={
                  Object {
                    "fontSize": 20,
                  }
                }
              >
                <i
                  aria-hidden="true"
                  className="yellow-text fa fa-exclamation-triangle"
                  style={
                    Object {
                      "paddingRight": 5,
                    }
                  }
                />
                No past events available for this center
              </h2>
            </div>
          </div>
        </div>
      </div>
      <br />
      <br />
      <Footer />
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_context": Object {},
      "_currentElement": <Details
        getReviews={[Function]}
        getSingle={[Function]}
        params={
          Object {
            "id": 1,
          }
        }
        review={
          Array [
            Object {
              "comment": "hello",
              "user": "aje",
            },
          ]
        }
        single={
          Object {
            "description": "awesome place",
            "events": Array [
              Object {
                "date": "09-09-2019",
                "description": "awesome place",
                "title": "emporium",
              },
              Object {
                "date": "09-09-2019",
                "description": "awesome place",
                "title": "emporium2",
              },
            ],
            "name": "emporium",
            "price": 400,
          }
        }
      />,
      "_instance": Details {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleSubmit": [Function],
        "onChange": [Function],
        "props": Object {
          "getReviews": [Function],
          "getSingle": [Function],
          "params": Object {
            "id": 1,
          },
          "review": Array [
            Object {
              "comment": "hello",
              "user": "aje",
            },
          ],
          "single": Object {
            "description": "awesome place",
            "events": Array [
              Object {
                "date": "09-09-2019",
                "description": "awesome place",
                "title": "emporium",
              },
              Object {
                "date": "09-09-2019",
                "description": "awesome place",
                "title": "emporium2",
              },
            ],
            "name": "emporium",
            "price": 400,
          },
        },
        "refs": Object {},
        "setRedirect": [Function],
        "setTime": [Function],
        "state": Object {
          "comment": "",
          "newArr1": Array [],
          "pastArr1": Array [],
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_nativeContainerInfo": null,
      "_nativeParent": null,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": Object {
        "_currentElement": <div
          className="Details"
        >
          <Navigator
            token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
          />
          <div
            className="section-header"
            style={
              Object {
                "backgroundColor": "#E5E4E2",
                "color": "#212F3C",
              }
            }
          >
            <h1
              className="light"
            >
              <span
                className="w3-padding-large borderRight"
              >
                <i
                  className="fa fa-star"
                />
              </span>
              <span
                className="w3-padding-large"
                style={
                  Object {
                    "textTransform": "uppercase",
                  }
                }
              >
                emporium
                 CENTER
              </span>
            </h1>
            <p
              className="font2 w3-padding-large"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id odio mollis, luctus ex at, accumsan magna....
            </p>
          </div>
          <div
            className="section-header2 font2"
          >
            <div
              className="row"
            >
              <div
                className="col l5 m12 s12"
              >
                <div
                  className="borders"
                >
                  <h2
                    className="font2"
                  >
                    <b>
                      emporium
                    </b>
                  </h2>
                  <p>
                    from  
                    <span
                      className="red-text"
                      style={
                        Object {
                          "fontSize": 22,
                          "marginLeft": 6,
                        }
                      }
                    >
                      $
                      400
                    </span>
                    / hour
                  </p>
                </div>
                <p
                  className="blue-grey-text"
                >
                  Capacity: 
                  ,  Size/sqft: 140-150sq
                </p>
                <p
                  className="font2 location"
                  style={
                    Object {
                      "fontSize": 18,
                    }
                  }
                >
                  <i
                    className="fa fa-map-marker blue-grey-text"
                    style={
                      Object {
                        "width": 10,
                      }
                    }
                  />
                   
                </p>
                <p
                  className="font2"
                  style={
                    Object {
                      "fontSize": 18,
                    }
                  }
                >
                  Donec placerat molestie sapien ac eleifend. Phasellus vulputate sagittis libero. In consectetur efficitur In consectetur efficitur erat, sit amet laoreet velit tempor nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus erat, sit amet laoreet velit tempor nec..
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Individual air conditioning units
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Safe
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Accessible
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Internet Access 24/7
                </p>
                <br />
                <div
                  className=""
                  style={
                    Object {
                      "paddingBottom": 100,
                    }
                  }
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/add/emporium"
                  >
                    <button
                      className="btn red"
                      style={
                        Object {
                          "marginRight": 25,
                        }
                      }
                    >
                      BOOK CENTER
                    </button>
                  </Link>
                </div>
              </div>
              <div
                className="col l7 m12 s12"
              >
                <img
                  className="img-responsive w3-border"
                  src={undefined}
                  style={
                    Object {
                      "height": 450,
                      "padding": 6,
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="row w3-padding-32 font2"
            style={
              Object {
                "backgroundColor": "#E5E4E2",
              }
            }
          >
            <div
              className="container"
            >
              <div
                className="col s12"
                style={
                  Object {
                    "marginBottom": 15,
                  }
                }
              >
                <ul
                  className="tabs"
                >
                  <li
                    className="tab col s3"
                  >
                    <a
                      className="active red-text"
                      href="#test1"
                    >
                      Upcoming Events
                    </a>
                  </li>
                  <li
                    className="tab col s3"
                  >
                    <a
                      className="red-text"
                      href="#test2"
                    >
                      Past Events
                    </a>
                  </li>
                  <li
                    className="tab col s3 rev"
                  >
                    <a
                      className="red-text"
                      href="#test3"
                    >
                      Reviews
                    </a>
                  </li>
                </ul>
              </div>
              <div
                className="col s12 m12 l12"
                id="test3"
              >
                <Reviews
                  decoded={
                    Object {
                      "exp": 1520890192,
                      "iat": 1520717392,
                      "user": Object {
                        "createdAt": "2018-03-10T20:55:45.237Z",
                        "email": "foo11@foo.com",
                        "id": 88,
                        "isAdmin": false,
                        "password": "$2a$10$1jemzAekY1AincxuD.VJSOExI5uiJU4t7brKCPzc0MifFR5MgUT7i",
                        "updatedAt": "2018-03-10T20:55:45.237Z",
                        "username": "andrew",
                      },
                    }
                  }
                  handleSubmit={[Function]}
                  onChange={[Function]}
                  review={
                    Array [
                      Object {
                        "comment": "hello",
                        "user": "aje",
                      },
                    ]
                  }
                  setTime={[Function]}
                  state={
                    Object {
                      "comment": "",
                      "newArr1": Array [],
                      "pastArr1": Array [],
                    }
                  }
                  token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
                />
              </div>
              <div
                className="col s12 m12 l12"
                id="test1"
              >
                <div
                  className="container center"
                >
                  <h2
                    className="font2"
                    style={
                      Object {
                        "fontSize": 20,
                      }
                    }
                  >
                    <i
                      aria-hidden="true"
                      className="yellow-text fa fa-exclamation-triangle"
                      style={
                        Object {
                          "paddingRight": 5,
                        }
                      }
                    />
                    No events available for this center
                  </h2>
                </div>
              </div>
              <div
                className="col s12 m12 l12"
                id="test2"
              >
                <div
                  className="container prevInfo"
                >
                  <h2
                    className="font2"
                    style={
                      Object {
                        "fontSize": 20,
                      }
                    }
                  >
                    <i
                      aria-hidden="true"
                      className="yellow-text fa fa-exclamation-triangle"
                      style={
                        Object {
                          "paddingRight": 5,
                        }
                      }
                    />
                    No past events available for this center
                  </h2>
                </div>
              </div>
            </div>
          </div>
          <br />
          <br />
          <Footer />
        </div>,
        "_renderedOutput": <div
          className="Details"
        >
          <Navigator
            token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
          />
          <div
            className="section-header"
            style={
              Object {
                "backgroundColor": "#E5E4E2",
                "color": "#212F3C",
              }
            }
          >
            <h1
              className="light"
            >
              <span
                className="w3-padding-large borderRight"
              >
                <i
                  className="fa fa-star"
                />
              </span>
              <span
                className="w3-padding-large"
                style={
                  Object {
                    "textTransform": "uppercase",
                  }
                }
              >
                emporium
                 CENTER
              </span>
            </h1>
            <p
              className="font2 w3-padding-large"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id odio mollis, luctus ex at, accumsan magna....
            </p>
          </div>
          <div
            className="section-header2 font2"
          >
            <div
              className="row"
            >
              <div
                className="col l5 m12 s12"
              >
                <div
                  className="borders"
                >
                  <h2
                    className="font2"
                  >
                    <b>
                      emporium
                    </b>
                  </h2>
                  <p>
                    from  
                    <span
                      className="red-text"
                      style={
                        Object {
                          "fontSize": 22,
                          "marginLeft": 6,
                        }
                      }
                    >
                      $
                      400
                    </span>
                    / hour
                  </p>
                </div>
                <p
                  className="blue-grey-text"
                >
                  Capacity: 
                  ,  Size/sqft: 140-150sq
                </p>
                <p
                  className="font2 location"
                  style={
                    Object {
                      "fontSize": 18,
                    }
                  }
                >
                  <i
                    className="fa fa-map-marker blue-grey-text"
                    style={
                      Object {
                        "width": 10,
                      }
                    }
                  />
                   
                </p>
                <p
                  className="font2"
                  style={
                    Object {
                      "fontSize": 18,
                    }
                  }
                >
                  Donec placerat molestie sapien ac eleifend. Phasellus vulputate sagittis libero. In consectetur efficitur In consectetur efficitur erat, sit amet laoreet velit tempor nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus erat, sit amet laoreet velit tempor nec..
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Individual air conditioning units
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Safe
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Accessible
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Internet Access 24/7
                </p>
                <br />
                <div
                  className=""
                  style={
                    Object {
                      "paddingBottom": 100,
                    }
                  }
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/add/emporium"
                  >
                    <button
                      className="btn red"
                      style={
                        Object {
                          "marginRight": 25,
                        }
                      }
                    >
                      BOOK CENTER
                    </button>
                  </Link>
                </div>
              </div>
              <div
                className="col l7 m12 s12"
              >
                <img
                  className="img-responsive w3-border"
                  src={undefined}
                  style={
                    Object {
                      "height": 450,
                      "padding": 6,
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="row w3-padding-32 font2"
            style={
              Object {
                "backgroundColor": "#E5E4E2",
              }
            }
          >
            <div
              className="container"
            >
              <div
                className="col s12"
                style={
                  Object {
                    "marginBottom": 15,
                  }
                }
              >
                <ul
                  className="tabs"
                >
                  <li
                    className="tab col s3"
                  >
                    <a
                      className="active red-text"
                      href="#test1"
                    >
                      Upcoming Events
                    </a>
                  </li>
                  <li
                    className="tab col s3"
                  >
                    <a
                      className="red-text"
                      href="#test2"
                    >
                      Past Events
                    </a>
                  </li>
                  <li
                    className="tab col s3 rev"
                  >
                    <a
                      className="red-text"
                      href="#test3"
                    >
                      Reviews
                    </a>
                  </li>
                </ul>
              </div>
              <div
                className="col s12 m12 l12"
                id="test3"
              >
                <Reviews
                  decoded={
                    Object {
                      "exp": 1520890192,
                      "iat": 1520717392,
                      "user": Object {
                        "createdAt": "2018-03-10T20:55:45.237Z",
                        "email": "foo11@foo.com",
                        "id": 88,
                        "isAdmin": false,
                        "password": "$2a$10$1jemzAekY1AincxuD.VJSOExI5uiJU4t7brKCPzc0MifFR5MgUT7i",
                        "updatedAt": "2018-03-10T20:55:45.237Z",
                        "username": "andrew",
                      },
                    }
                  }
                  handleSubmit={[Function]}
                  onChange={[Function]}
                  review={
                    Array [
                      Object {
                        "comment": "hello",
                        "user": "aje",
                      },
                    ]
                  }
                  setTime={[Function]}
                  state={
                    Object {
                      "comment": "",
                      "newArr1": Array [],
                      "pastArr1": Array [],
                    }
                  }
                  token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
                />
              </div>
              <div
                className="col s12 m12 l12"
                id="test1"
              >
                <div
                  className="container center"
                >
                  <h2
                    className="font2"
                    style={
                      Object {
                        "fontSize": 20,
                      }
                    }
                  >
                    <i
                      aria-hidden="true"
                      className="yellow-text fa fa-exclamation-triangle"
                      style={
                        Object {
                          "paddingRight": 5,
                        }
                      }
                    />
                    No events available for this center
                  </h2>
                </div>
              </div>
              <div
                className="col s12 m12 l12"
                id="test2"
              >
                <div
                  className="container prevInfo"
                >
                  <h2
                    className="font2"
                    style={
                      Object {
                        "fontSize": 20,
                      }
                    }
                  >
                    <i
                      aria-hidden="true"
                      className="yellow-text fa fa-exclamation-triangle"
                      style={
                        Object {
                          "paddingRight": 5,
                        }
                      }
                    />
                    No past events available for this center
                  </h2>
                </div>
              </div>
            </div>
          </div>
          <br />
          <br />
          <Footer />
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": null,
      "_topLevelWrapper": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Details
    getReviews={[Function]}
    getSingle={[Function]}
    params={
      Object {
        "id": 1,
      }
    }
    review={
      Array [
        Object {
          "comment": "hello",
          "user": "aje",
        },
      ]
    }
    single={
      Object {
        "description": "awesome place",
        "events": Array [
          Object {
            "date": "09-09-2019",
            "description": "awesome place",
            "title": "emporium",
          },
          Object {
            "date": "09-09-2019",
            "description": "awesome place",
            "title": "emporium2",
          },
        ],
        "name": "emporium",
        "price": 400,
      }
    }
  />,
}
`;

exports[`Test suites for Detail component detail component renders past events 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="Details"
  >
    <Navigator
      token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
    />
    <div
      className="section-header"
      style={
        Object {
          "backgroundColor": "#E5E4E2",
          "color": "#212F3C",
        }
      }
    >
      <h1
        className="light"
      >
        <span
          className="w3-padding-large borderRight"
        >
          <i
            className="fa fa-star"
          />
        </span>
        <span
          className="w3-padding-large"
          style={
            Object {
              "textTransform": "uppercase",
            }
          }
        >
          emporium
           CENTER
        </span>
      </h1>
      <p
        className="font2 w3-padding-large"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id odio mollis, luctus ex at, accumsan magna....
      </p>
    </div>
    <div
      className="section-header2 font2"
    >
      <div
        className="row"
      >
        <div
          className="col l5 m12 s12"
        >
          <div
            className="borders"
          >
            <h2
              className="font2"
            >
              <b>
                emporium
              </b>
            </h2>
            <p>
              from  
              <span
                className="red-text"
                style={
                  Object {
                    "fontSize": 22,
                    "marginLeft": 6,
                  }
                }
              >
                $
                400
              </span>
              / hour
            </p>
          </div>
          <p
            className="blue-grey-text"
          >
            Capacity: 
            ,  Size/sqft: 140-150sq
          </p>
          <p
            className="font2 location"
            style={
              Object {
                "fontSize": 18,
              }
            }
          >
            <i
              className="fa fa-map-marker blue-grey-text"
              style={
                Object {
                  "width": 10,
                }
              }
            />
             
          </p>
          <p
            className="font2"
            style={
              Object {
                "fontSize": 18,
              }
            }
          >
            Donec placerat molestie sapien ac eleifend. Phasellus vulputate sagittis libero. In consectetur efficitur In consectetur efficitur erat, sit amet laoreet velit tempor nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus erat, sit amet laoreet velit tempor nec..
          </p>
          <p>
            <span>
              <i
                className="fa fa-check blue-grey-text"
                style={
                  Object {
                    "width": 20,
                  }
                }
              />
            </span>
            Individual air conditioning units
          </p>
          <p>
            <span>
              <i
                className="fa fa-check blue-grey-text"
                style={
                  Object {
                    "width": 20,
                  }
                }
              />
            </span>
            Safe
          </p>
          <p>
            <span>
              <i
                className="fa fa-check blue-grey-text"
                style={
                  Object {
                    "width": 20,
                  }
                }
              />
            </span>
            Accessible
          </p>
          <p>
            <span>
              <i
                className="fa fa-check blue-grey-text"
                style={
                  Object {
                    "width": 20,
                  }
                }
              />
            </span>
            Internet Access 24/7
          </p>
          <br />
          <div
            className=""
            style={
              Object {
                "paddingBottom": 100,
              }
            }
          >
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/add/emporium"
            >
              <button
                className="btn red"
                style={
                  Object {
                    "marginRight": 25,
                  }
                }
              >
                BOOK CENTER
              </button>
            </Link>
          </div>
        </div>
        <div
          className="col l7 m12 s12"
        >
          <img
            className="img-responsive w3-border"
            src={undefined}
            style={
              Object {
                "height": 450,
                "padding": 6,
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="row w3-padding-32 font2"
      style={
        Object {
          "backgroundColor": "#E5E4E2",
        }
      }
    >
      <div
        className="container"
      >
        <div
          className="col s12"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <ul
            className="tabs"
          >
            <li
              className="tab col s3"
            >
              <a
                className="active red-text"
                href="#test1"
              >
                Upcoming Events
              </a>
            </li>
            <li
              className="tab col s3"
            >
              <a
                className="red-text"
                href="#test2"
              >
                Past Events
              </a>
            </li>
            <li
              className="tab col s3 rev"
            >
              <a
                className="red-text"
                href="#test3"
              >
                Reviews
              </a>
            </li>
          </ul>
        </div>
        <div
          className="col s12 m12 l12"
          id="test3"
        >
          <Reviews
            decoded={
              Object {
                "exp": 1520890192,
                "iat": 1520717392,
                "user": Object {
                  "createdAt": "2018-03-10T20:55:45.237Z",
                  "email": "foo11@foo.com",
                  "id": 88,
                  "isAdmin": false,
                  "password": "$2a$10$1jemzAekY1AincxuD.VJSOExI5uiJU4t7brKCPzc0MifFR5MgUT7i",
                  "updatedAt": "2018-03-10T20:55:45.237Z",
                  "username": "andrew",
                },
              }
            }
            handleSubmit={[Function]}
            onChange={[Function]}
            review={
              Array [
                Object {
                  "comment": "hello",
                  "user": "aje",
                },
              ]
            }
            setTime={[Function]}
            state={
              Object {
                "comment": "",
                "newArr1": Array [],
                "pastArr1": Array [],
              }
            }
            token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
          />
        </div>
        <div
          className="col s12 m12 l12"
          id="test1"
        >
          <div
            className="container center"
          >
            <h2
              className="font2"
              style={
                Object {
                  "fontSize": 20,
                }
              }
            >
              <i
                aria-hidden="true"
                className="yellow-text fa fa-exclamation-triangle"
                style={
                  Object {
                    "paddingRight": 5,
                  }
                }
              />
              No events available for this center
            </h2>
          </div>
        </div>
        <div
          className="col s12 m12 l12"
          id="test2"
        >
          <div
            className="container prevInfo"
          >
            <h2
              className="font2"
              style={
                Object {
                  "fontSize": 20,
                }
              }
            >
              <i
                aria-hidden="true"
                className="yellow-text fa fa-exclamation-triangle"
                style={
                  Object {
                    "paddingRight": 5,
                  }
                }
              />
              No past events available for this center
            </h2>
          </div>
        </div>
      </div>
    </div>
    <br />
    <br />
    <Footer />
  </div>,
  "nodes": Array [
    <div
      className="Details"
    >
      <Navigator
        token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
      />
      <div
        className="section-header"
        style={
          Object {
            "backgroundColor": "#E5E4E2",
            "color": "#212F3C",
          }
        }
      >
        <h1
          className="light"
        >
          <span
            className="w3-padding-large borderRight"
          >
            <i
              className="fa fa-star"
            />
          </span>
          <span
            className="w3-padding-large"
            style={
              Object {
                "textTransform": "uppercase",
              }
            }
          >
            emporium
             CENTER
          </span>
        </h1>
        <p
          className="font2 w3-padding-large"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id odio mollis, luctus ex at, accumsan magna....
        </p>
      </div>
      <div
        className="section-header2 font2"
      >
        <div
          className="row"
        >
          <div
            className="col l5 m12 s12"
          >
            <div
              className="borders"
            >
              <h2
                className="font2"
              >
                <b>
                  emporium
                </b>
              </h2>
              <p>
                from  
                <span
                  className="red-text"
                  style={
                    Object {
                      "fontSize": 22,
                      "marginLeft": 6,
                    }
                  }
                >
                  $
                  400
                </span>
                / hour
              </p>
            </div>
            <p
              className="blue-grey-text"
            >
              Capacity: 
              ,  Size/sqft: 140-150sq
            </p>
            <p
              className="font2 location"
              style={
                Object {
                  "fontSize": 18,
                }
              }
            >
              <i
                className="fa fa-map-marker blue-grey-text"
                style={
                  Object {
                    "width": 10,
                  }
                }
              />
               
            </p>
            <p
              className="font2"
              style={
                Object {
                  "fontSize": 18,
                }
              }
            >
              Donec placerat molestie sapien ac eleifend. Phasellus vulputate sagittis libero. In consectetur efficitur In consectetur efficitur erat, sit amet laoreet velit tempor nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus erat, sit amet laoreet velit tempor nec..
            </p>
            <p>
              <span>
                <i
                  className="fa fa-check blue-grey-text"
                  style={
                    Object {
                      "width": 20,
                    }
                  }
                />
              </span>
              Individual air conditioning units
            </p>
            <p>
              <span>
                <i
                  className="fa fa-check blue-grey-text"
                  style={
                    Object {
                      "width": 20,
                    }
                  }
                />
              </span>
              Safe
            </p>
            <p>
              <span>
                <i
                  className="fa fa-check blue-grey-text"
                  style={
                    Object {
                      "width": 20,
                    }
                  }
                />
              </span>
              Accessible
            </p>
            <p>
              <span>
                <i
                  className="fa fa-check blue-grey-text"
                  style={
                    Object {
                      "width": 20,
                    }
                  }
                />
              </span>
              Internet Access 24/7
            </p>
            <br />
            <div
              className=""
              style={
                Object {
                  "paddingBottom": 100,
                }
              }
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/add/emporium"
              >
                <button
                  className="btn red"
                  style={
                    Object {
                      "marginRight": 25,
                    }
                  }
                >
                  BOOK CENTER
                </button>
              </Link>
            </div>
          </div>
          <div
            className="col l7 m12 s12"
          >
            <img
              className="img-responsive w3-border"
              src={undefined}
              style={
                Object {
                  "height": 450,
                  "padding": 6,
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="row w3-padding-32 font2"
        style={
          Object {
            "backgroundColor": "#E5E4E2",
          }
        }
      >
        <div
          className="container"
        >
          <div
            className="col s12"
            style={
              Object {
                "marginBottom": 15,
              }
            }
          >
            <ul
              className="tabs"
            >
              <li
                className="tab col s3"
              >
                <a
                  className="active red-text"
                  href="#test1"
                >
                  Upcoming Events
                </a>
              </li>
              <li
                className="tab col s3"
              >
                <a
                  className="red-text"
                  href="#test2"
                >
                  Past Events
                </a>
              </li>
              <li
                className="tab col s3 rev"
              >
                <a
                  className="red-text"
                  href="#test3"
                >
                  Reviews
                </a>
              </li>
            </ul>
          </div>
          <div
            className="col s12 m12 l12"
            id="test3"
          >
            <Reviews
              decoded={
                Object {
                  "exp": 1520890192,
                  "iat": 1520717392,
                  "user": Object {
                    "createdAt": "2018-03-10T20:55:45.237Z",
                    "email": "foo11@foo.com",
                    "id": 88,
                    "isAdmin": false,
                    "password": "$2a$10$1jemzAekY1AincxuD.VJSOExI5uiJU4t7brKCPzc0MifFR5MgUT7i",
                    "updatedAt": "2018-03-10T20:55:45.237Z",
                    "username": "andrew",
                  },
                }
              }
              handleSubmit={[Function]}
              onChange={[Function]}
              review={
                Array [
                  Object {
                    "comment": "hello",
                    "user": "aje",
                  },
                ]
              }
              setTime={[Function]}
              state={
                Object {
                  "comment": "",
                  "newArr1": Array [],
                  "pastArr1": Array [],
                }
              }
              token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
            />
          </div>
          <div
            className="col s12 m12 l12"
            id="test1"
          >
            <div
              className="container center"
            >
              <h2
                className="font2"
                style={
                  Object {
                    "fontSize": 20,
                  }
                }
              >
                <i
                  aria-hidden="true"
                  className="yellow-text fa fa-exclamation-triangle"
                  style={
                    Object {
                      "paddingRight": 5,
                    }
                  }
                />
                No events available for this center
              </h2>
            </div>
          </div>
          <div
            className="col s12 m12 l12"
            id="test2"
          >
            <div
              className="container prevInfo"
            >
              <h2
                className="font2"
                style={
                  Object {
                    "fontSize": 20,
                  }
                }
              >
                <i
                  aria-hidden="true"
                  className="yellow-text fa fa-exclamation-triangle"
                  style={
                    Object {
                      "paddingRight": 5,
                    }
                  }
                />
                No past events available for this center
              </h2>
            </div>
          </div>
        </div>
      </div>
      <br />
      <br />
      <Footer />
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_context": Object {},
      "_currentElement": <Details
        getReviews={[Function]}
        getSingle={[Function]}
        params={
          Object {
            "id": 1,
          }
        }
        review={
          Array [
            Object {
              "comment": "hello",
              "user": "aje",
            },
          ]
        }
        single={
          Object {
            "description": "awesome place",
            "events": Array [
              Object {
                "date": "09-09-2019",
                "description": "awesome place",
                "title": "emporium",
              },
              Object {
                "date": "09-09-2019",
                "description": "awesome place",
                "title": "emporium2",
              },
            ],
            "name": "emporium",
            "price": 400,
          }
        }
      />,
      "_instance": Details {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleSubmit": [Function],
        "onChange": [Function],
        "props": Object {
          "getReviews": [Function],
          "getSingle": [Function],
          "params": Object {
            "id": 1,
          },
          "review": Array [
            Object {
              "comment": "hello",
              "user": "aje",
            },
          ],
          "single": Object {
            "description": "awesome place",
            "events": Array [
              Object {
                "date": "09-09-2019",
                "description": "awesome place",
                "title": "emporium",
              },
              Object {
                "date": "09-09-2019",
                "description": "awesome place",
                "title": "emporium2",
              },
            ],
            "name": "emporium",
            "price": 400,
          },
        },
        "refs": Object {},
        "setRedirect": [Function],
        "setTime": [Function],
        "state": Object {
          "comment": "",
          "newArr1": Array [
            Object {
              "date": "2019-04-05",
              "name": "algo",
            },
            Object {
              "date": "2018-09-07",
              "name": "op",
            },
          ],
          "pastArr1": Array [],
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_nativeContainerInfo": null,
      "_nativeParent": null,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": Object {
        "_currentElement": <div
          className="Details"
        >
          <Navigator
            token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
          />
          <div
            className="section-header"
            style={
              Object {
                "backgroundColor": "#E5E4E2",
                "color": "#212F3C",
              }
            }
          >
            <h1
              className="light"
            >
              <span
                className="w3-padding-large borderRight"
              >
                <i
                  className="fa fa-star"
                />
              </span>
              <span
                className="w3-padding-large"
                style={
                  Object {
                    "textTransform": "uppercase",
                  }
                }
              >
                emporium
                 CENTER
              </span>
            </h1>
            <p
              className="font2 w3-padding-large"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id odio mollis, luctus ex at, accumsan magna....
            </p>
          </div>
          <div
            className="section-header2 font2"
          >
            <div
              className="row"
            >
              <div
                className="col l5 m12 s12"
              >
                <div
                  className="borders"
                >
                  <h2
                    className="font2"
                  >
                    <b>
                      emporium
                    </b>
                  </h2>
                  <p>
                    from  
                    <span
                      className="red-text"
                      style={
                        Object {
                          "fontSize": 22,
                          "marginLeft": 6,
                        }
                      }
                    >
                      $
                      400
                    </span>
                    / hour
                  </p>
                </div>
                <p
                  className="blue-grey-text"
                >
                  Capacity: 
                  ,  Size/sqft: 140-150sq
                </p>
                <p
                  className="font2 location"
                  style={
                    Object {
                      "fontSize": 18,
                    }
                  }
                >
                  <i
                    className="fa fa-map-marker blue-grey-text"
                    style={
                      Object {
                        "width": 10,
                      }
                    }
                  />
                   
                </p>
                <p
                  className="font2"
                  style={
                    Object {
                      "fontSize": 18,
                    }
                  }
                >
                  Donec placerat molestie sapien ac eleifend. Phasellus vulputate sagittis libero. In consectetur efficitur In consectetur efficitur erat, sit amet laoreet velit tempor nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus erat, sit amet laoreet velit tempor nec..
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Individual air conditioning units
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Safe
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Accessible
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Internet Access 24/7
                </p>
                <br />
                <div
                  className=""
                  style={
                    Object {
                      "paddingBottom": 100,
                    }
                  }
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/add/emporium"
                  >
                    <button
                      className="btn red"
                      style={
                        Object {
                          "marginRight": 25,
                        }
                      }
                    >
                      BOOK CENTER
                    </button>
                  </Link>
                </div>
              </div>
              <div
                className="col l7 m12 s12"
              >
                <img
                  className="img-responsive w3-border"
                  src={undefined}
                  style={
                    Object {
                      "height": 450,
                      "padding": 6,
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="row w3-padding-32 font2"
            style={
              Object {
                "backgroundColor": "#E5E4E2",
              }
            }
          >
            <div
              className="container"
            >
              <div
                className="col s12"
                style={
                  Object {
                    "marginBottom": 15,
                  }
                }
              >
                <ul
                  className="tabs"
                >
                  <li
                    className="tab col s3"
                  >
                    <a
                      className="active red-text"
                      href="#test1"
                    >
                      Upcoming Events
                    </a>
                  </li>
                  <li
                    className="tab col s3"
                  >
                    <a
                      className="red-text"
                      href="#test2"
                    >
                      Past Events
                    </a>
                  </li>
                  <li
                    className="tab col s3 rev"
                  >
                    <a
                      className="red-text"
                      href="#test3"
                    >
                      Reviews
                    </a>
                  </li>
                </ul>
              </div>
              <div
                className="col s12 m12 l12"
                id="test3"
              >
                <Reviews
                  decoded={
                    Object {
                      "exp": 1520890192,
                      "iat": 1520717392,
                      "user": Object {
                        "createdAt": "2018-03-10T20:55:45.237Z",
                        "email": "foo11@foo.com",
                        "id": 88,
                        "isAdmin": false,
                        "password": "$2a$10$1jemzAekY1AincxuD.VJSOExI5uiJU4t7brKCPzc0MifFR5MgUT7i",
                        "updatedAt": "2018-03-10T20:55:45.237Z",
                        "username": "andrew",
                      },
                    }
                  }
                  handleSubmit={[Function]}
                  onChange={[Function]}
                  review={
                    Array [
                      Object {
                        "comment": "hello",
                        "user": "aje",
                      },
                    ]
                  }
                  setTime={[Function]}
                  state={
                    Object {
                      "comment": "",
                      "newArr1": Array [
                        Object {
                          "date": "2019-04-05",
                          "name": "algo",
                        },
                        Object {
                          "date": "2018-09-07",
                          "name": "op",
                        },
                      ],
                      "pastArr1": Array [],
                    }
                  }
                  token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
                />
              </div>
              <div
                className="col s12 m12 l12"
                id="test1"
              >
                <Events
                  event={
                    Object {
                      "date": "2019-04-05",
                      "name": "algo",
                    }
                  }
                />
                <Events
                  event={
                    Object {
                      "date": "2018-09-07",
                      "name": "op",
                    }
                  }
                />
              </div>
              <div
                className="col s12 m12 l12"
                id="test2"
              >
                <div
                  className="container prevInfo"
                >
                  <h2
                    className="font2"
                    style={
                      Object {
                        "fontSize": 20,
                      }
                    }
                  >
                    <i
                      aria-hidden="true"
                      className="yellow-text fa fa-exclamation-triangle"
                      style={
                        Object {
                          "paddingRight": 5,
                        }
                      }
                    />
                    No past events available for this center
                  </h2>
                </div>
              </div>
            </div>
          </div>
          <br />
          <br />
          <Footer />
        </div>,
        "_renderedOutput": <div
          className="Details"
        >
          <Navigator
            token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
          />
          <div
            className="section-header"
            style={
              Object {
                "backgroundColor": "#E5E4E2",
                "color": "#212F3C",
              }
            }
          >
            <h1
              className="light"
            >
              <span
                className="w3-padding-large borderRight"
              >
                <i
                  className="fa fa-star"
                />
              </span>
              <span
                className="w3-padding-large"
                style={
                  Object {
                    "textTransform": "uppercase",
                  }
                }
              >
                emporium
                 CENTER
              </span>
            </h1>
            <p
              className="font2 w3-padding-large"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id odio mollis, luctus ex at, accumsan magna....
            </p>
          </div>
          <div
            className="section-header2 font2"
          >
            <div
              className="row"
            >
              <div
                className="col l5 m12 s12"
              >
                <div
                  className="borders"
                >
                  <h2
                    className="font2"
                  >
                    <b>
                      emporium
                    </b>
                  </h2>
                  <p>
                    from  
                    <span
                      className="red-text"
                      style={
                        Object {
                          "fontSize": 22,
                          "marginLeft": 6,
                        }
                      }
                    >
                      $
                      400
                    </span>
                    / hour
                  </p>
                </div>
                <p
                  className="blue-grey-text"
                >
                  Capacity: 
                  ,  Size/sqft: 140-150sq
                </p>
                <p
                  className="font2 location"
                  style={
                    Object {
                      "fontSize": 18,
                    }
                  }
                >
                  <i
                    className="fa fa-map-marker blue-grey-text"
                    style={
                      Object {
                        "width": 10,
                      }
                    }
                  />
                   
                </p>
                <p
                  className="font2"
                  style={
                    Object {
                      "fontSize": 18,
                    }
                  }
                >
                  Donec placerat molestie sapien ac eleifend. Phasellus vulputate sagittis libero. In consectetur efficitur In consectetur efficitur erat, sit amet laoreet velit tempor nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus erat, sit amet laoreet velit tempor nec..
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Individual air conditioning units
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Safe
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Accessible
                </p>
                <p>
                  <span>
                    <i
                      className="fa fa-check blue-grey-text"
                      style={
                        Object {
                          "width": 20,
                        }
                      }
                    />
                  </span>
                  Internet Access 24/7
                </p>
                <br />
                <div
                  className=""
                  style={
                    Object {
                      "paddingBottom": 100,
                    }
                  }
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/add/emporium"
                  >
                    <button
                      className="btn red"
                      style={
                        Object {
                          "marginRight": 25,
                        }
                      }
                    >
                      BOOK CENTER
                    </button>
                  </Link>
                </div>
              </div>
              <div
                className="col l7 m12 s12"
              >
                <img
                  className="img-responsive w3-border"
                  src={undefined}
                  style={
                    Object {
                      "height": 450,
                      "padding": 6,
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="row w3-padding-32 font2"
            style={
              Object {
                "backgroundColor": "#E5E4E2",
              }
            }
          >
            <div
              className="container"
            >
              <div
                className="col s12"
                style={
                  Object {
                    "marginBottom": 15,
                  }
                }
              >
                <ul
                  className="tabs"
                >
                  <li
                    className="tab col s3"
                  >
                    <a
                      className="active red-text"
                      href="#test1"
                    >
                      Upcoming Events
                    </a>
                  </li>
                  <li
                    className="tab col s3"
                  >
                    <a
                      className="red-text"
                      href="#test2"
                    >
                      Past Events
                    </a>
                  </li>
                  <li
                    className="tab col s3 rev"
                  >
                    <a
                      className="red-text"
                      href="#test3"
                    >
                      Reviews
                    </a>
                  </li>
                </ul>
              </div>
              <div
                className="col s12 m12 l12"
                id="test3"
              >
                <Reviews
                  decoded={
                    Object {
                      "exp": 1520890192,
                      "iat": 1520717392,
                      "user": Object {
                        "createdAt": "2018-03-10T20:55:45.237Z",
                        "email": "foo11@foo.com",
                        "id": 88,
                        "isAdmin": false,
                        "password": "$2a$10$1jemzAekY1AincxuD.VJSOExI5uiJU4t7brKCPzc0MifFR5MgUT7i",
                        "updatedAt": "2018-03-10T20:55:45.237Z",
                        "username": "andrew",
                      },
                    }
                  }
                  handleSubmit={[Function]}
                  onChange={[Function]}
                  review={
                    Array [
                      Object {
                        "comment": "hello",
                        "user": "aje",
                      },
                    ]
                  }
                  setTime={[Function]}
                  state={
                    Object {
                      "comment": "",
                      "newArr1": Array [
                        Object {
                          "date": "2019-04-05",
                          "name": "algo",
                        },
                        Object {
                          "date": "2018-09-07",
                          "name": "op",
                        },
                      ],
                      "pastArr1": Array [],
                    }
                  }
                  token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7
    ImlkIjo4OCwidXNlcm5hbWUiOiJhbmRyZXciLCJlbWFpbCI6ImZvbzExQGZvby5jb20iLCJwYXNzd29yZCI
    6IiQyYSQxMCQxamVtekFla1kxQWluY3h1RC5WSlNPRXhJNXVpSlU0dDdicktDUHpjME1pZkZSNU1nVVQ3aSIs
    ImlzQWRtaW4iOmZhbHNlLCJjcmVhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oiLCJ1cGRhdGVkQXQiOiIyMDE4LTAzLTEwVDIwOjU1OjQ1LjIzN1oifSwiaWF0IjoxNTIwNz
    E3MzkyLCJleHAiOjE1MjA4OTAxOTJ9.vtV9eRx_6OpJOw_cvBIlztCmQVRqvuJFwmo2trxy1B0"
                />
              </div>
              <div
                className="col s12 m12 l12"
                id="test1"
              >
                <Events
                  event={
                    Object {
                      "date": "2019-04-05",
                      "name": "algo",
                    }
                  }
                />
                <Events
                  event={
                    Object {
                      "date": "2018-09-07",
                      "name": "op",
                    }
                  }
                />
              </div>
              <div
                className="col s12 m12 l12"
                id="test2"
              >
                <div
                  className="container prevInfo"
                >
                  <h2
                    className="font2"
                    style={
                      Object {
                        "fontSize": 20,
                      }
                    }
                  >
                    <i
                      aria-hidden="true"
                      className="yellow-text fa fa-exclamation-triangle"
                      style={
                        Object {
                          "paddingRight": 5,
                        }
                      }
                    />
                    No past events available for this center
                  </h2>
                </div>
              </div>
            </div>
          </div>
          <br />
          <br />
          <Footer />
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": null,
      "_topLevelWrapper": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Details
    getReviews={[Function]}
    getSingle={[Function]}
    params={
      Object {
        "id": 1,
      }
    }
    review={
      Array [
        Object {
          "comment": "hello",
          "user": "aje",
        },
      ]
    }
    single={
      Object {
        "description": "awesome place",
        "events": Array [
          Object {
            "date": "09-09-2019",
            "description": "awesome place",
            "title": "emporium",
          },
          Object {
            "date": "09-09-2019",
            "description": "awesome place",
            "title": "emporium2",
          },
        ],
        "name": "emporium",
        "price": 400,
      }
    }
  />,
}
`;
